# jamie.lim

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
day1/: Modelfile.jamie
day2/: Day2-RAG-ChatGPT.ipynb
day3/: Day3-RAG agent-0731.ipynb
