[tool.poetry]
name = "jamie-lim-ai-advanced"
version = "0.1.0"
description = "Jamie's AI Advanced"
authors = ["Jamie <jamie.lim@kakaocorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.3"
llmlingua = "^0.2"
jupyterlab = "^4.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13"
black = "^24.4"
flake8 = "^7.1"
flake8-docstrings = "^1.7"
flake8-pyproject = "^1.2"
pre-commit = "^3.7"
pre-commit-hooks = "^4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_sort_within_sections = true

[tool.flake8]
max-line-length = 88
ignore = "E203,W503"
